# mctp-serial-linux

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
linux-mctp/: README.md
linux-mctp/libsermctp/: CMakeLists.txt  README.md  sermctp.pc.in
linux-mctp/libsermctp/examples/: broadcast_from_tty_example.cpp  broadcast_to_tty_example.cpp  linux_to_tty_example.cpp  tty_to_linux_example.cpp
linux-mctp/libsermctp/include/sermctp/: LinuxMctpSerial.hpp  MctpBridge.hpp  MctpFramer.hpp  export.h  sermctp.hpp
linux-mctp/libsermctp/include/sermctp/detail/: LinuxMctpSerial_impl.hpp  ManagedUsbTty.hpp  MctpBridge_impl.hpp  MctpFramer_impl.hpp
linux-mctp/libsermctp/src/: BcastMessenger.cpp  BcastMessenger.hpp  CMakeLists.txt  LinuxMctpSerial.cpp  ManagedUsbTty.cpp  MctpBridge.cpp  MctpFramer.cpp  MctpNetlink.cpp  MctpNetlink_impl.hpp
linux-mctp/libsermctp/tests/: CMakeLists.txt  Log.hpp  bridge_stress.cpp  mctp_random_messages_embedded.cpp  mctp_random_messages_embedded.h  test_BcastMessenger.cpp  test_MctpFramer_decode.cpp  test_MctpNetlink_builder_only.cpp  test_MctpNetlink_smoke.cpp  test_linuxserial.cpp  test_runner.cpp
linux-mctp/mctp-bridge/: .gitignore  CMakeLists.txt  README.md
linux-mctp/mctp-bridge-wrapper/: CMakeLists.txt
linux-mctp/mctp-bridge/clean_src/: CMakeLists.txt
linux-mctp/mctp-bridge/examples/: python_mctp_bridge_example.py
linux-mctp/mctp-bridge/src/: CMakeLists.txt  mctp-bridge.cpp
linux-mctp/mctp-bridge/src2/: CMakeLists.txt
linux-mctp/mctp-bridge/tests/: CMakeLists.txt
